samples/_failures_safe/1761283827_57a769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71295902.c: In function ‘main’:
./samples/SAFE/__tmp_71295902.c:149:13: error: expected expression at end of input
  149 |             if (!
      |             ^~
./samples/SAFE/__tmp_71295902.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71295902.c:149:13: error: expected declaration or statement at end of input
